--- a/css/find_password.css
+++ b/css/find_password.css
@@ -26,6 +26,7 @@
 
     font-size: 1.5rem;
     border-radius: 10px;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -36,9 +37,7 @@
 .find {
     margin-top: 0px;
     margin-bottom: 0px;
-}
-
-.find a {
+    
     color: grey;
 }
 
