--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,12 +20,13 @@
             <form action="/auth/login/process" method="post" class="login">
                 <p>
                     <label for="user_email" class="label">이메일</labeL>
-                    <input type="email" id="user_email" name="user_email" class="input" placeholder="E-MAIL"/>
+                    <input type="email" id="user_email" name="user_email" class="input" placeholder="E-Mail"/>
 
                     <label for="user_pw" class="label">비밀번호</labeL>
-                    <input type="password" id="user_pw" name="user_pw" class="input" placeholder="PASSWORD"/>
+                    <input type="password" id="user_pw" name="user_pw" class="input" placeholder="Password"/>
                 </p>
                 <div style="color:red; margin-bottom: 1rem; font-size:1.2rem; font-weight:bold;"><%=flashMsg%></div>
+                <p class="find"><a href="/auth/find/password">비밀번호 찾기</a></p>
                 <input type="submit" id="submit" value="로그인"/>
                 <input type="button" id="submit" value="회원가입" onclick="location.href='/auth/register'"/>
             </form>
