UPDATE: find password mail send system completed.

--- a/css/change_password.css
+++ b/css/change_password.css
@@ -1,4 +1,4 @@
-.login {
+.newPassword {
     width: 100%;
 
     background-color: white;
@@ -8,15 +8,15 @@
     padding-right: 2rem;
 }
 
-.login .input {
+.newPassword .input {
     width: 100%;
 }
 
-.login .label {
+.newPassword .label {
     font-size: 1.5rem;
 }
 
-.login #submit {
+.newPassword #submit {
     width: 20rem;
     background-color: #002366;
     color: white;
@@ -27,19 +27,6 @@
     font-size: 1.5rem;
     border-radius: 10px;
     margin-bottom: 1rem;
-}
-
-.userType {
-    display: inline-block;
-}
-
-.find {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.find a {
-    color: grey;
 }
 
 /* Media Query 를 사용한 휴대폰, 데스크탑 표현 구분 */
@@ -56,10 +43,6 @@
     .input {
         font-size: 2rem;
     }
-
-    .find {
-        font-size: 1rem;
-    }
 }
 
 @media screen and (orientation : portrait) { /*세로모드*/
@@ -72,9 +55,5 @@
 
     .input {
         font-size: 1.3rem;
-    }
-
-    .find {
-        font-size: 1rem;
     }
 }
