UPDATE: font change.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: 'NanumBarunPen';
+    src: url(/font/NanumPen.ttf);
+}
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    src: url(/font/NanumBarunGothic.ttf);
+}
+
 body {
     background-color: #EFEFEF;
+    font-family: NanumBarunGothic;
     font-size: 30px;
 }
 
@@ -8,6 +19,8 @@ body {
     color: #002366;
     text-align: center;
     cursor: pointer;
+
+    font-family: NanumBarunPen;
 }
 
 .box-container {
