--- a/views/post_list.ejs
+++ b/views/post_list.ejs
@@ -15,7 +15,7 @@
         <link rel="icon" href="/image/favicon.ico">
         <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
         <link rel="stylesheet" type="text/css" href="/css/layout.css">
-        <link rel="stylesheet" type="text/css" href="/css/board.css">
+        <link rel="stylesheet" type="text/css" href="/css/post_list.css">
         <script src="/js/board.js"></script>
 
         <title>가치타자</title>
