--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -12,7 +12,9 @@
     </head>
     <body>
         <header>
-            <h1 class="title" onclick="location.href='/'">가치타자</h1>
+            <h1 class="title">
+                <a href="/">가치타자</a>
+            </h1>
         </header>
         <!-- 로그인 폼 -->
         <main class="box-container">
