--- a/views/post_write.ejs
+++ b/views/post_write.ejs
@@ -19,11 +19,13 @@
                 document.getElementsByName("date")[0].setAttribute('value', today);
             }
         </script>
-        <title>가치타자 - 회원가입</title>
+        <title>가치타자</title>
     </head>
     <body>
         <header>
-            <h1 class="title" onclick="location.href='/'">가치타자</h1>
+            <h1 class="title">
+                <a href="/">가치타자</a>
+            </h1>
         </header>
         <!-- 로그인 폼 -->
         <main class="box-container">
