--- a/css/post.css
+++ b/css/post.css
@@ -25,6 +25,11 @@
     font-size: 1.5rem;
 }
 
+.context .fromTo {
+    color: grey;
+    font-size: 1rem;
+}
+
 .btn {
     cursor: pointer;
     float: right;
