--- a/css/user_setting.css
+++ b/css/user_setting.css
@@ -1,36 +1,31 @@
-/*route button css*/
-.routeList {
+.setting {
     width: 100%;
-
-    list-style: none; /*점 제거*/
-    padding-left: 0px; /*점이 있는 공간 제거*/
-    margin: 0px;
 
     background-color: white;
     border-radius: 1rem;
-    
+
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
-.routeBtn {
-    cursor:pointer;
-    text-align: center;
+.setting .input {
+    width: 100%;
+}
 
-    border: 1px solid #444444;
-    border-radius: 1rem;
-    
-    margin-top: 1rem;
+.setting .label {
+    font-size: 1.5rem;
+}
+
+.setting .submit {
+    width: 100%;
+    background-color: #003876;
+    color: white;
+
+    cursor: pointer;
+
+    font-size: 1.5rem;
+    border-radius: 10px;
     margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.routeBtn:hover {
-    text-decoration: underline;
-}
-
-.routeBtn sup {
-    font-style: italic;
-    color: grey;
 }
 
 /* Media Query 를 사용한 휴대폰, 데스크탑 표현 구분 */
@@ -43,8 +38,8 @@
         width: 30%;
         float: left;
     }
-
-    .routeBtn {
+    
+    .input {
         font-size: 2rem;
     }
 }
@@ -56,8 +51,8 @@
     main .box {
         float: left;
     }
-    
-    .routeBtn {
-        font-size: 1.5rem;
+
+    .input {
+        font-size: 1.3rem;
     }
 }
