--- a/views/post.ejs
+++ b/views/post.ejs
@@ -13,19 +13,22 @@
 
     <body>
         <header>
-            <h1 class="title" onclick="location.href='/'">가치타자</h1>
+            <h1 class="title">
+                <a href="/">가치타자</a>
+            </h1>
             <!-- 로그인, 내 정보 관리 버튼 -->
             <nav class="box-container">
                 <div class="box"></div>
                 <ul class="menuList">
-                    <li class="menuBtn">회원설정</li>
+                    <li class="menuBtn"><a href="/auth/mysetting">회원설정</a></li>
 
                     <%# 로그인 버튼 %>
                     <% if (userNo) { %>
-                        <li class="menuBtn" onclick="location.href='/auth/logout'">로그아웃</li>
+                        <li class="menuBtn"><a href="/auth/logout">로그아웃</a></li>
                     <% } else { %>
-                        <li class="menuBtn" onclick="location.href='/auth/login'">로그인 / 회원가입</li>
+                        <li class="menuBtn"><a href="/auth/login">로그인 / 회원가입</a></li>
                     <% } %>
+
                 </ul>
                 <div class="box"></div>
             </nav>
@@ -37,7 +40,9 @@
                 <div>
                     <h4 class="infoTitle">노선</h4>
                     <p class="context">
-                        <%=departure%> -> <%=destination%>
+                        <strong class="fromTo">from</strong> <%=departure%>
+                        <br>
+                        <strong class="fromTo">to</strong> <%=destination%>
                     </p>
                     <hr>
 
